vlib/v/checker/tests/var_decl_import_sym_conflict.vv
import arrays

fn x() {
	arrays := 1
}
